Initial, quick update for Edmond, OK.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 
     <title>Spellman Tutoring - Math, Physics, Statistics</title>
-    <meta name=description content="I tutor students in math and physics in Midland, TX. You get course material made clear and serious prep to execute on test day.">
-    <meta name=keywords content="Spellman, Tutoring, tutor, teacher, Midland, Texas, TX, algebra, calculus, differential equations, discrete math, geometry, linear algebra, math, pre-calculus, real analysis, topology, trigonometry, physics, mechanics, statistics, college, Midland College, high school">
+    <meta name=description content="I tutor students in math and physics in Edmond, OK. You get course material made clear and serious prep to execute on test day.">
+    <meta name=keywords content="Spellman, Tutoring, tutor, teacher, Edmond, Oklahoma, OK, algebra, calculus, differential equations, discrete math, geometry, linear algebra, math, pre-calculus, real analysis, topology, trigonometry, physics, mechanics, statistics, college, Oklahoma Christian University, University of Central Oklahoma, high school">
     <meta name=author content="Cort Spellman">
 
 
@@ -48,7 +48,7 @@
 
             <div id=HeaderLinks class="grid_5 suffix_4">
 
-                <span id=HeaderPhone>mobile 979-436-2192</span>
+                <span id=HeaderPhone>text or call 979-436-2192</span>
 
                 <span id=HeaderScheduleLink rel="#ScheduleOverlay">schedule</span>
 
@@ -129,7 +129,7 @@
 
                 <p>
 
-                    I tutor math, physics, and statistics in Midland, TX.<br/>
+                    I tutor math, physics, and statistics in Edmond, OK.<br/>
 
                 </p>
 
@@ -159,6 +159,23 @@
 
         <div id=FormContainer>
 
+            <p>
+                To schedule a session,<br />
+                text or call 979-436-2192<br />
+                or email spellmantutoring@gmail.com.
+            </p>
+
+            <p>
+                Please include your
+                <ul>
+                    <li>name</li>
+                    <li>course</li>
+                    <li>topic</li>
+                    <li>preferred meeting time and place (coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</li>
+                </ul>
+            </p>
+
+            <!-- Comment out form
             <form id=Form action="http://formmail.dreamhost.com/cgi-bin/formmail.cgi" method=POST autocomplete=off>
 
 
@@ -261,6 +278,7 @@
                 </fieldset>
 
             </form>
+            end commenting out form -->
 
         </div>
 
@@ -303,7 +321,7 @@
 
                 <p>
 
-                    I have been teaching since 2006. My students have done well!
+                    I have been teaching since 2005. My students have done well!
 
                 </p>
 
@@ -458,7 +476,7 @@
 
                     <p>
 
-                        I taught student-athletes as the volunteer head coach of Texas A&amp;M Powerlifting from 2006 &ndash; 2013; I have been an assistant coach of the USA Powerlifting Junior National Team since 2008. I work tirelessly to find ways to engage and bring out the best in my lifters to help them reach their potential. My athletes have achieved success at the national and international levels and have excelled in their studies and subsequent careers.
+                        I taught student-athletes as the volunteer head coach of Texas A&amp;M Powerlifting from 2006 &ndash; 2013; I was an assistant coach of the USA Powerlifting Junior National Team from 2008 &ndash; 2013. I worked tirelessly to find ways to engage and bring out the best in my lifters to help them reach their potential. My athletes have achieved success at the national and international levels and have excelled in their studies and subsequent careers.
 
                     </p>
 
@@ -480,20 +498,32 @@
 
                         <h1>Courses</h1>
 
-                        <h2 id=MidlandCollegeCourses>Midland College</h2>
+                        <h2 id=CollegeCourses>College</h2>
 
                         <p>
 
-                            All Math Courses<br/>
+                            Math: most courses, including upper-level courses<br/>
+                            <!--
                             <span style="color: #888888">0170, 0270, 0370, 0371, 0372<br/>
                             1314, 1316, 1324, 1325, 1342, 1350, 1351, 1414<br/>
                             2412, 2413, 2414, 2415, 2420</span>
+                            -->
                         </p>
 
                         <p>
 
+                            Physics: mechanics; electricity, magnetism, and optics
+                            <!--
                             Physics 1401, 1402, 2425, 2426
+                            -->
+                        </p>
 
+                        <p>
+
+                            Statistics: intro statistics courses
+                            <!--
+                            Physics 1401, 1402, 2425, 2426
+                            -->
                         </p>
 
                         <h2 id=HighSchoolCourses>High School</h2>
@@ -511,7 +541,7 @@
                         <p>
 
                             <b>Did I leave your course out?</b><br/>
-                            I may be able to help you with a course I don't normally tutor. I have tutored a student in a graduate geophysics course and I have helped a chemistry student become proficient with unit conversions.<br/>
+                            I may be able to help you with a course I don't normally tutor. I have tutored a student in graduate geophysics and I have helped a chemistry student become proficient with unit conversions.<br/>
                             <span id=RateScheduleLink rel="#ScheduleOverlay">Click here to contact me</span> &mdash; I may be able to help you out.
 
                         </p>
