Remove forms, old course #s. Link ph # to overlay.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
 
-    <title>Spellman Tutoring - Math, Physics, Statistics</title>
-    <meta name=description content="I tutor students in math and physics in Edmond, OK. You get course material made clear and serious prep to execute on test day.">
-    <meta name=keywords content="Spellman, Tutoring, tutor, teacher, Edmond, Oklahoma, OK, algebra, calculus, differential equations, discrete math, geometry, linear algebra, math, pre-calculus, real analysis, topology, trigonometry, physics, mechanics, statistics, college, Oklahoma Christian University, University of Central Oklahoma, high school">
+    <title>Spellman Private Tutoring - Math, Physics, Statistics</title>
+    <meta name=description content="I tutor college and high-school students in math, physics, and statistics in Edmond, OK. Meet at your convenience. Understand your course material. Make better grades.">
+    <meta name=keywords content="Spellman, Tutoring, private tutoring, private tutor, tutor, teacher, Edmond, Oklahoma, OK, algebra, calculus, differential equations, discrete math, geometry, linear algebra, math, pre-calculus, real analysis, topology, trigonometry, physics, mechanics, electricity, magnetism, optics, statistics, college, Oklahoma Christian University, University of Central Oklahoma, high school">
     <meta name=author content="Cort Spellman">
 
 
@@ -48,15 +48,9 @@
 
             <div id=HeaderLinks class="grid_5 suffix_4">
 
-                <span id=HeaderPhone>text or call 979-436-2192</span>
+                <span id=HeaderPhoneLink rel="#ScheduleOverlay">text or call 979-436-2192</span>
 
                 <span id=HeaderScheduleLink rel="#ScheduleOverlay">schedule</span>
-
-                <div id=Facebook>
-
-                    <a href="http://www.facebook.com/pages/Spellman-Tutoring/105982122827749?sk=app_190322544333196" target=_blank></a>
-
-                </div>
 
                 <div id=LinkedIn>
 
@@ -157,10 +151,10 @@
 
     <section id=ScheduleOverlay class=simple_overlay>
 
-        <div id=FormContainer>
+        <div id=Scheduling>
 
             <p>
-                To schedule a session,<br />
+                To schedule a session<br />
                 text or call 979-436-2192<br />
                 or email spellmantutoring@gmail.com.
             </p>
@@ -174,111 +168,6 @@
                     <li>preferred meeting time and place (coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</li>
                 </ul>
             </p>
-
-            <!-- Comment out form
-            <form id=Form action="http://formmail.dreamhost.com/cgi-bin/formmail.cgi" method=POST autocomplete=off>
-
-
-                <fieldset>
-
-                    <input type=hidden name=recipient value="scheduling#spellmantutoring.com"/>
-
-                    <input type=hidden name=subject value="Scheduling Form Submission"/>
-
-                    <input type=hidden name=redirect value="http://spellmantutoring.com"/>
-
-                    <input type=hidden name=required value="realname, course, email, phone"/>
-
-                    <input type=hidden name=sort value="order : realname, course, date, time, location, phone, email, preferredcontact, timetocall"/>
-
-                    <input type=hidden name=print_config value="realname, email"/>
-
-                    <input type=hidden name=print_blank_fields value=1 />
-
-                    <input type=hidden name=date_offset value=-6 />
-
-                </fieldset>
-
-                <fieldset>
-
-                    <div id=Name class=InputContainer>
-
-                        <input type=text name=realname maxlength=50 />
-                        <span class=Required>Name</span>
-
-                    </div>
-
-                    <div id=Course class=InputContainer>
-
-                        <input type=text name=course maxlength=50 />
-                        <span class=Required>Course</span>
-
-                    </div>
-
-                    <div id=Date class=InputContainer>
-
-                        <input type=text name=date maxlength=20 />
-                        <span>Preferred date</span>
-
-                    </div>
-
-                    <div id=Time class=InputContainer>
-
-                        <input type=text name=time maxlength=20 />
-                        <span>time</span>
-
-                    </div>
-
-                    <div id=Phone class=InputContainer>
-
-                        <input type=tel name=phone maxlength=25 />
-                        <span class=Required>Phone</span>
-
-                    </div>
-
-                    <div id=Email class=InputContainer>
-
-                        <input type=email name=email />
-                        <span class=Required>Email</span>
-
-                    </div>
-
-                    <div id=PreferredContactContainer>
-
-                        <span id=PreferredContactSpan class=Label>Preferred contact?</span>
-
-                        <input id=PreferredContactEmail type=radio name=preferredcontact value=Email checked=true />
-                        <label for=PreferredContactEmail>Email</label>
-
-                        <input id=PreferredContactPhone type=radio name=preferredcontact value=Phone />
-                        <label for=PreferredContactPhone>Phone</label>
-
-                    </div>
-
-                    <select id=TimeToCall name=timetocall>
-                        <option value="">Preferred time to call?</option>
-                        <option value=Morning>Morning</option>
-                        <option value=Afternoon>Afternoon</option>
-                        <option value=Evening>Evening</option>
-                    </select>
-
-                    <div id=Message class=InputContainer>
-
-                        <textarea rows=5 name=message></textarea>
-                        <span>Message</span>
-
-                    </div>
-
-                    <div id=Submit class=InputContainer>
-
-                        <input type=submit name=CollegeForm value="Send Form"/>
-
-                    </div>
-
-                </fieldset>
-
-            </form>
-            end commenting out form -->
 
         </div>
 
@@ -502,28 +391,19 @@
 
                         <p>
 
-                            Math: most courses, including upper-level courses<br/>
-                            <!--
-                            <span style="color: #888888">0170, 0270, 0370, 0371, 0372<br/>
-                            1314, 1316, 1324, 1325, 1342, 1350, 1351, 1414<br/>
-                            2412, 2413, 2414, 2415, 2420</span>
-                            -->
+                            Math: most courses, including upper-level courses
+
                         </p>
 
                         <p>
 
-                            Physics: mechanics; electricity, magnetism, and optics
-                            <!--
-                            Physics 1401, 1402, 2425, 2426
-                            -->
+                            Physics: mechanics, electricity and magnetism and optics
                         </p>
 
                         <p>
 
-                            Statistics: intro statistics courses
-                            <!--
-                            Physics 1401, 1402, 2425, 2426
-                            -->
+                            Statistics: intro statistics courses, biology statistics, psychology statistics
+
                         </p>
 
                         <h2 id=HighSchoolCourses>High School</h2>
