Add student comment, update look of comments.

--- a/index.html
+++ b/index.html
@@ -481,22 +481,40 @@
 
                     <p class=studentComment>
 
+                        <span class=comment>&ldquo;I got an A- in Stats!! You really gave me back my confidence for this class. Thank you so much!<br />
+                            You made the difference &mdash; couldn't have done it without you.&rdquo;</span><br/>
+                        <span class=student>&mdash; Sarah J.</span>
+                        <span class=school>University of Texas of the Permian Basin</span>
+                        <span class=course>Psychology statistics</span>
+
+                    </p>
+
+                    <p class=studentComment>
+
                         <span class=comment>&ldquo;I GOT AN A IN PHYSICS! Thanks so so so much!&rdquo;</span><br/>
-                            <span class=student>&mdash; Physics (mechanics) student</span>
+                        <span class=student>&mdash; Katie R.</span>
+                        <span class=school>Texas A&amp;M University</span>
+                        <span class=course>Physics &ndash; mechanics</span>
+                        <span class=course>Physics &ndash; electricity, magnetism, and optics</span>
 
                     </p>
 
                     <p class=studentComment>
 
                         <span class=comment>&ldquo;I used to hate math but now it&#39;s my favorite subject because I understand it.&rdquo;</span><br/>
-                            <span class=student>&mdash; Business calculus student</span>
+                        <span class=student>&mdash; Caroline C.</span>
+                        <span class=school>Texas A&amp;M University</span>
+                        <span class=course>Business calculus</span>
+                        <span class=course>Statistics</span>
 
                     </p>
 
                     <p class=studentComment>
 
                         <span class=comment>&ldquo;Finally got through calculus and graduated!&rdquo;</span><br/>
-                            <span class=student>&mdash; Business calculus student</span>
+                        <span class=student>&mdash; Matthew H.</span>
+                        <span class=school>Texas A&amp;M University</span>
+                        <span class=course>Business calculus</span>
 
                     </p>
 
