--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div id=Tagline class=grid_12>
 
                 <h2>You want to succeed in school.<br/>
-                I&#39;d like to help.</h2>
+                    I&#39;d like to help.</h2>
 
             </div>
 
@@ -154,20 +154,18 @@
         <div id=Scheduling>
 
             <p>
-                To schedule a session<br />
-                text or call 979-436-2192<br />
-                or email spellmantutoring@gmail.com.
+                To schedule a session please<br />
+                text or call <a href="tel:979-436-2192">979-436-2192</a><br />
+                or email <a href="mailto:spellmantutoring@gmail.com">spellmantutoring@gmail.com</a>.
             </p>
 
-            <p>
-                Please include your
-                <ul>
-                    <li>name</li>
-                    <li>course</li>
-                    <li>topic</li>
-                    <li>preferred meeting time and place (coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</li>
-                </ul>
-            </p>
+            Please include your
+            <ul>
+                <li>name</li>
+                <li>course name <span class="example-input">(e.g., calculus I)</span></li>
+                <li>topic <span class="example-input">(e.g., limits)</span></li>
+                <li>preferred meeting time and place<br /><span class="example-input">(coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</span></li>
+            </ul>
 
         </div>
 
@@ -615,28 +613,28 @@
 
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-  <script>window.jQuery||document.write("<script src='js/libs/jquery-1.5.1.min.js'>\x3C/script>");</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <script>window.jQuery||document.write("<script src='js/libs/jquery-1.5.1.min.js'>\x3C/script>");</script>
 
 
 
 
-  <script src="http://cdn.jquerytools.org/1.2.5/tiny/jquery.tools.min.js"></script>
-  <script type="text/javascript">(typeof $.overlay==="function")||document.write(unescape("%3Cscript src='js/mylibs/jquery.tools.min.js' type='text/javascript'%3E%3C/script%3E"));</script>
+    <script src="http://cdn.jquerytools.org/1.2.5/tiny/jquery.tools.min.js"></script>
+    <script type="text/javascript">(typeof $.overlay==="function")||document.write(unescape("%3Cscript src='js/mylibs/jquery.tools.min.js' type='text/javascript'%3E%3C/script%3E"));</script>
 
 
 
-  <script src='js/script.js'></script>
+    <script src='js/script.js'></script>
 
 
 
-  <!--[if lt IE 7 ]><script src="js/libs/dd_belatedpng.js"></script>
-    <script>DD_belatedPNG.fix("img, .png_bg");</script><![endif]-->
+    <!--[if lt IE 7 ]><script src="js/libs/dd_belatedpng.js"></script>
+         <script>DD_belatedPNG.fix("img, .png_bg");</script><![endif]-->
 
 
 
 
-  <script>var _gaq=[["_setAccount","UA-24324785-1"],["_setDomainName",".spellmantutoring.com"],["_trackPageview"]];(function(e,a){var c=e.createElement(a),b=e.getElementsByTagName(a)[0];c.async=1;c.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";b.parentNode.insertBefore(c,b)}(document,"script"));</script>
+    <script>var _gaq=[["_setAccount","UA-24324785-1"],["_setDomainName",".spellmantutoring.com"],["_trackPageview"]];(function(e,a){var c=e.createElement(a),b=e.getElementsByTagName(a)[0];c.async=1;c.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";b.parentNode.insertBefore(c,b)}(document,"script"));</script>
 
 </body>
 
