Clean up - scheduling positioning, class names.
Make recently-made class names CamelCase like rest of site.
Why did I do that initially? I think there was a conflict between a name I
wanted to use some name in the grid system or jQuery Tools popup or something.
Whatever - at least keep it consistent.

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
             Please include your
             <ul>
                 <li>name</li>
-                <li>course name <span class="example-input">(e.g., calculus I)</span></li>
-                <li>topic <span class="example-input">(e.g., limits)</span></li>
-                <li>preferred meeting time and place<br /><span class="example-input">(coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</span></li>
+                <li>course name <span class="ExampleInput">(e.g., calculus I)</span></li>
+                <li>topic <span class="ExampleInput">(e.g., limits)</span></li>
+                <li>preferred meeting time and place<br /><span class="ExampleInput">(coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</span></li>
             </ul>
 
         </div>
@@ -477,42 +477,42 @@
 
                     <h1>Comments from students</h1>
 
-                    <p class=studentComment>
+                    <p class=StudentComment>
 
-                        <span class=comment>&ldquo;I got an A- in Stats!! You really gave me back my confidence for this class. Thank you so much!<br />
+                        <span class=Comment>&ldquo;I got an A- in Stats!! You really gave me back my confidence for this class. Thank you so much!<br />
                             You made the difference &mdash; couldn't have done it without you.&rdquo;</span><br/>
-                        <span class=student>&mdash; Sarah J.</span>
-                        <span class=school>University of Texas of the Permian Basin</span>
-                        <span class=course>Psychology statistics</span>
+                        <span class=Student>&mdash; Sarah J.</span>
+                        <span class=School>University of Texas of the Permian Basin</span>
+                        <span class=Course>Psychology statistics</span>
 
                     </p>
 
-                    <p class=studentComment>
+                    <p class=StudentComment>
 
-                        <span class=comment>&ldquo;I GOT AN A IN PHYSICS! Thanks so so so much!&rdquo;</span><br/>
-                        <span class=student>&mdash; Katie R.</span>
-                        <span class=school>Texas A&amp;M University</span>
-                        <span class=course>Physics &ndash; mechanics</span>
-                        <span class=course>Physics &ndash; electricity, magnetism, and optics</span>
-
-                    </p>
-
-                    <p class=studentComment>
-
-                        <span class=comment>&ldquo;I used to hate math but now it&#39;s my favorite subject because I understand it.&rdquo;</span><br/>
-                        <span class=student>&mdash; Caroline C.</span>
-                        <span class=school>Texas A&amp;M University</span>
-                        <span class=course>Business calculus</span>
-                        <span class=course>Statistics</span>
+                        <span class=Comment>&ldquo;I GOT AN A IN PHYSICS! Thanks so so so much!&rdquo;</span><br/>
+                        <span class=Student>&mdash; Katie R.</span>
+                        <span class=School>Texas A&amp;M University</span>
+                        <span class=Course>Physics &ndash; mechanics</span>
+                        <span class=Course>Physics &ndash; electricity, magnetism, and optics</span>
 
                     </p>
 
-                    <p class=studentComment>
+                    <p class=StudentComment>
 
-                        <span class=comment>&ldquo;Finally got through calculus and graduated!&rdquo;</span><br/>
-                        <span class=student>&mdash; Matthew H.</span>
-                        <span class=school>Texas A&amp;M University</span>
-                        <span class=course>Business calculus</span>
+                        <span class=Comment>&ldquo;I used to hate math but now it&#39;s my favorite subject because I understand it.&rdquo;</span><br/>
+                        <span class=Student>&mdash; Caroline C.</span>
+                        <span class=School>Texas A&amp;M University</span>
+                        <span class=Course>Business calculus</span>
+                        <span class=Course>Statistics</span>
+
+                    </p>
+
+                    <p class=StudentComment>
+
+                        <span class=Comment>&ldquo;Finally got through calculus and graduated!&rdquo;</span><br/>
+                        <span class=Student>&mdash; Matthew H.</span>
+                        <span class=School>Texas A&amp;M University</span>
+                        <span class=Course>Business calculus</span>
 
                     </p>
 
