Add note about scheduling format - removed form.
I used to have a PHP-backed contact form that used PHP Mailer. I didn't want to
pay for hosting and most contact with students was via text message anyway,
though, so I'm hosting the site on GitHub pages without a back end and asking
students to text, call, or email to schedule an appointment.
Will it work as well? I'll find out.

--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
                 <li>preferred meeting time and place<br /><span class="ExampleInput">(coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</span></li>
             </ul>
 
+            <p class="NoFormExplanation">
+                Note: This area used to be a contact form that sent me an email. The vast majority of students wanted to text, though, so let's simplify and text from the beginning.<br \>
+                If you do want to use email, that's great too: <a href="mailto:spellmantutoring@gmail.com">spellmantutoring@gmail.com</a>.
+            </p>
+
         </div>
 
         <div id=IframeFailurePlaceholder>
