Revise note that there used to be a contact form.

--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
             </ul>
 
             <p class="NoFormExplanation">
-                Note: This area used to be a contact form that sent me an email. The vast majority of students wanted to text, though, so let's simplify and text from the beginning.<br \>
-                If you do want to use email, that's great too: <a href="mailto:spellmantutoring@gmail.com">spellmantutoring@gmail.com</a>.
+                Note: This area used to be a contact form. Typical communication with a student was:<br />Single email exchange or phone call &rarr;<br /><span class="tabbed1">Recurring texts and/or phone calls</span><br />I don't know that the form provided much value so this is a trial in doing without it.
             </p>
 
         </div>
