Update copy, a little styling clean-up.
I haven't updated the copy, other than student comments, since I
originally published the site in 2011. I've learned a bit since then.

--- a/index.html
+++ b/index.html
@@ -78,11 +78,8 @@
 
                         <p>
 
-                            Howdy! My name is Cort Spellman.<br/>
+                            Hi! My name is Cort Spellman.<br/>
                             I&#39;m from Fort Worth, Texas.<br/>
-                            <span class=Tamu>M.S. Mathematics, Texas A&amp;M</span><br/>
-                            <span class=Tcu>B.S. Mathematics, TCU</span><br/>
-                            <span class=Tcu>B.S. Physics, TCU</span>
 
                         </p>
 
@@ -91,6 +88,20 @@
                             Cort Spellman, Founder
 
                         </div>
+
+                        <ul>
+
+                            <li>Independent private tutoring in College Station and Midland, TX</li>
+                            <li>Tutoring for <a href="http://www.aggielandtutoring.com/" target="_blank">Aggieland Tutoring</a> in College Station, TX</li>
+                            <li>Graduate TA at Texas A&amp;M</li>
+                            <li>Graduate TA at LSU</li>
+                            <li>Former head coach of the <a href="http://aggiepowerlifting.com" target="_blank">Texas A&amp;M Powerlifting Team</a></li>
+                            <li>Former assistant coach of the <a href="http://www.usapowerlifting.com/" target="_blank">Under-24 USAPL National Powerlifting Team</a></li>
+                            <li><span class="Tamu">M.S. Mathematics, Texas A&amp;M</span><br/></li>
+                            <li><span class="Tcu">B.S. Mathematics, TCU</span><br/></li>
+                            <li><span class="Tcu">B.S. Physics, TCU</span></li>
+
+                        </ul>
 
                     </div>
 
@@ -129,7 +140,7 @@
 
                 <p>
 
-                    I work with your schedule. You get course material made clear and serious prep to execute on test day.
+                    I work with your schedule. You get understanding of course material and underlying concepts to make better grades.
 
                 </p>
 
@@ -164,22 +175,23 @@
                 <li>name</li>
                 <li>course name <span class="ExampleInput">(e.g., calculus I)</span></li>
                 <li>topic <span class="ExampleInput">(e.g., limits)</span></li>
-                <li>preferred meeting time and place<br /><span class="ExampleInput">(coffee shops, libraries, on-campus locations with visitor access, your residence if you're 18+ or are a high school student and have a parent/guardian present, etc.)</span></li>
+                <li>preferred meeting time and place<br /><span class="ExampleInput">(coffee shops, libraries, on-campus locations with visitor access, your residence if you&#39;re 18+ or are a high school student and have a parent/guardian present, etc
+                    .)</span></li>
             </ul>
 
             <p class="NoFormExplanation">
-                Note: This area used to be a contact form. Typical communication with a student was:<br />Single email exchange or phone call &rarr;<br /><span class="tabbed1">Recurring texts and/or phone calls</span><br />I don't know that the form provided much value so this is a trial in doing without it.
+                Note: This area used to be a contact form. Typical communication with a student was:<br />Single email exchange or phone call &rarr;<br /><span class="tabbed1">Recurring texts and/or phone calls</span><br />I don&#39;t know that the form provided much value so this is a trial in doing without it.
             </p>
 
         </div>
 
         <div id=IframeFailurePlaceholder>
 
-            <h2>Apparently, the Google calendar with my availability isn't displaying.</h2>
+            <h2>Apparently, the Google calendar with my availability isn&#39;t displaying.</h2>
 
             <p>
 
-                No problem. I'm available plenty! Just enter your preferred date and time as you complete the form to the left. If I already have a client at your preferred time, then we'll figure out an alternate time when I contact you, following your form submission.
+                No problem. I&#39;m available plenty! Just enter your preferred date and time as you complete the form to the left. If I already have a client at your preferred time, then we&#39;ll figure out an alternate time when I contact you, following your form submission.
 
             </p>
 
@@ -274,9 +286,21 @@
 
                     </p>
 
+                    <h2>Get the benefit of experience</h2>
+
                     <p>
 
-                        I have been a student, I earned my bachelor&#39;s and master&#39;s degrees in math and my bachelor&#39;s in physics, I taught math for several years as a graduate TA at Texas A&amp;M, and I have tutored privately since 2011. I know the material and I take pride in teaching it well.
+                        If you have specific questions, great &mdash; let's start there. Often, however, students don&#39;t know what they don&#39;t know. Working with an experienced teacher can really be a time-saver. I&#39;ve worked with a number of students who wanted help with calculus but struggled with algebra, for example. Algebra needs to be a reliable tool when you're trying to do calculus so we began by sharpening that tool. Once the algebra was in place the calculus became understandable; without the algebra the calculus was not going to happen.
+
+                    </p>
+
+                    <p>
+                        On the other hand, course material has inherent difficulty. What does a given mathematical notation really mean? In what situations do you use combinations vs. permutations in counting, such as in a probability and statistics class? There is no rote procedure at all for something like estabilishing a limit via the epsilon-delta definition in calculus or like most things in an upper-level class, such as real analysis or abstract algebra.
+                    </p>
+
+                    <p>
+
+                        I have been a student, I earned my bachelor&#39;s and master&#39;s degrees in math and my bachelor&#39;s in physics, I taught math for several years as a graduate TA at Texas A&amp;M and LSU, and I have tutored students since 2011. I know the material and I take pride in teaching it well.
 
                     </p>
 
@@ -292,12 +316,6 @@
 
                     </p>
 
-                    <p>
-
-                        If you have specific questions, great! If you need help but aren&#39;t sure of exactly what to ask, that works too!
-
-                    </p>
-
                     <h3>Review for your test?</h3>
 
                     <p>
@@ -309,14 +327,6 @@
 
                     <p>
                         Take advantage of the reviews your professor and TA provide and then work with me if you need more help.  Neither they nor I can develop your understanding for you; you&#39;re going to have to put in the practice time.  If you need explanation or help with problem-solving strategies, though, I&#39;d like to work with you. There is only so much time in the day; I&#39;ll set you on the right track so your study time is productive.
-
-                    </p>
-
-                    <h3>Get help cramming?</h3>
-
-                    <p>
-
-                        I can help. Like academic duct tape, this is a stopgap measure and not a means of preparing for subsequent courses or careers. However, I will review the most important information with you, see where you need to improve in practice problems, and clarify as time allows.
 
                     </p>
 
@@ -338,13 +348,25 @@
 
                     <p>
 
-                        I have been tutoring math and physics full-time since 2011. I've helped many students improve their grades, pass classes they were failing, or even get A&#39;s in courses they had previously dropped.
+                        I have been tutoring math, physics, and statistics since 2011. I&#39;ve helped many students improve their grades, pass classes they were failing, pass classes to graduate, or even get A&#39;s in courses they had previously dropped.
+
+                    </p>
+
+                    <p>
+
+                        I've tutored independently and I contracted with <a href="http://www.aggielandtutoring.com/" target="_blank">Aggieland Tutoring</a> in 2013. In College Station, TX, from 2011 to 2013, I tutored students from Texas A&amp;M University and Blinn College. In Midland, TX, in 2013, I tutored students from the University of Texas of the Permian Basin, Midland College, various high schools, and I worked with one elementary-school student in life science. Now I'm offering tutoring in Edmond, Oklahoma.
 
                     </p>
 
                     <p>
 
                         I taught math for several years as a graduate TA at Texas A&amp;M University. My classes consistently scored in the top percentiles on common exams, compared to 50 &ndash; 70 other sections each semester. I work hard to make concepts clear to each student and to establish understanding of the effort required for each student to achieve his or her goals.
+
+                    </p>
+
+                    <p>
+
+                        I helped college algebra students with online homework as a graduate TA at Louisiana State University in 2005.
 
                     </p>
 
@@ -358,7 +380,7 @@
 
                         <p>
 
-                            &ldquo;They call it coaching but it's really teaching.&rdquo;<br/>
+                            &ldquo;They call it coaching but it&#39;s really teaching.&rdquo;<br/>
                             <b>&mdash; Vince Lombardi</b>
 
                         </p>
@@ -367,7 +389,7 @@
 
                     <p>
 
-                        I taught student-athletes as the volunteer head coach of Texas A&amp;M Powerlifting from 2006 &ndash; 2013; I was an assistant coach of the USA Powerlifting Junior National Team from 2008 &ndash; 2013. I worked tirelessly to find ways to engage and bring out the best in my lifters to help them reach their potential. My athletes have achieved success at the national and international levels and have excelled in their studies and subsequent careers.
+                        I taught student-athletes as the volunteer head coach of Texas A&amp;M Powerlifting from 2006 to 2013; I was an assistant coach of the USA Powerlifting Junior National Team from 2008 to 2009 and from 2011 to 2013. I worked tirelessly to find ways to engage and bring out the best in my lifters to help them reach their potential. My athletes have achieved success at the national and international levels and have excelled in their studies and subsequent careers.
 
                     </p>
 
@@ -399,7 +421,7 @@
 
                         <p>
 
-                            Physics: mechanics, electricity and magnetism and optics
+                            Physics: lower-level mechanics, electricity, magnetism, and optics
                         </p>
 
                         <p>
@@ -423,7 +445,7 @@
                         <p>
 
                             <b>Did I leave your course out?</b><br/>
-                            I may be able to help you with a course I don't normally tutor. I have tutored a student in graduate geophysics and I have helped a chemistry student become proficient with unit conversions.<br/>
+                            I may be able to help you with a course I don&#39;t normally tutor. I have tutored a student in graduate geophysics, helped a chemistry student become proficient with unit conversions, and worked with one elementary-school student in life science.<br/>
                             <span id=RateScheduleLink rel="#ScheduleOverlay">Click here to contact me</span> &mdash; I may be able to help you out.
 
                         </p>
@@ -446,7 +468,7 @@
 
                         <p>
 
-                            I work with small groups as well. <span id=RateScheduleLink rel="#ScheduleOverlay">Click here</span> to set up a session. The discounted rate per person will depend on the size of your group.
+                            I work with small groups as well. <span id=RateScheduleLink rel="#ScheduleOverlay">Click here</span> to set up a session. When I help students and they also help each other, it tends to go really well &mdash; one student explaining something (correctly, lol) to another seems to greatly benefit both. When I end up helping multiple people independently, though, it doesn't seem like anyone gets as much out of it as they would have with individual sessions.
 
                         </p>
 
@@ -484,7 +506,7 @@
                     <p class=StudentComment>
 
                         <span class=Comment>&ldquo;I got an A- in Stats!! You really gave me back my confidence for this class. Thank you so much!<br />
-                            You made the difference &mdash; couldn't have done it without you.&rdquo;</span><br/>
+                            You made the difference &mdash; couldn&#39;t have done it without you.&rdquo;</span><br/>
                         <span class=Student>&mdash; Sarah J.</span>
                         <span class=School>University of Texas of the Permian Basin</span>
                         <span class=Course>Psychology statistics</span>
@@ -496,8 +518,8 @@
                         <span class=Comment>&ldquo;I GOT AN A IN PHYSICS! Thanks so so so much!&rdquo;</span><br/>
                         <span class=Student>&mdash; Katie R.</span>
                         <span class=School>Texas A&amp;M University</span>
-                        <span class=Course>Physics &ndash; mechanics</span>
-                        <span class=Course>Physics &ndash; electricity, magnetism, and optics</span>
+                        <span class=Course>Physics &mdash; mechanics</span>
+                        <span class=Course>Physics &mdash; electricity, magnetism, and optics</span>
 
                     </p>
 
@@ -530,7 +552,7 @@
 
                         <div id=understanding-of-students-needs class=ir>
 
-                            Understanding of students' needs. 100% recommended.
+                            Understanding of students&#39; needs. 100% recommended.
 
                         </div>
 
@@ -548,7 +570,7 @@
 
                         <div id=easily-get-along-with class=ir>
 
-                            He's someone you can easily get along with and someone you aren't scared to ask questions.
+                            He&#39;s someone you can easily get along with and someone you aren&#39;t scared to ask questions.
 
                         </div>
 
@@ -578,7 +600,7 @@
 
                         <div id=no-hes-mine class=ir>
 
-                            <i>Do you recommend this TA?  Why or why not?</i> NO! He's mine!
+                            <i>Do you recommend this TA?  Why or why not?</i> NO! He&#39;s mine!
 
                         </div>
 
